[package]
name = "diffmetrik"
version = "0.1.0"
authors = ["Miroslav Zoricak <miroslav.zoricak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysctl = "0.4.0"
libc = "0.2"
structopt = "0.3"
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
human_format = "1.0.3"
fs2 = "0.4.3"
snafu = "0.6.0"
failure = "0.1.6"
