[package]
name = "diffmetrik"
version = "0.3.0"
authors = ["Miroslav Zoricak <miroslav.zoricak@gmail.com>"]
edition = "2018"

description = "CLI Tool that can be repeatedly called to obtain quick information about vital system metrics (CPU Load Average, RAM Usage, Disk and Network usage)."
homepage = "https://github.com/mirosval/diffmetrik"
repository = "https://github.com/mirosval/diffmetrik"
readme = "README.md"
keywords = ["cli", "metrics"]
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysctl = "0.5.4"
libc = "0.2"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
human_format = "1.0.3"
fs2 = "0.4.3"
